fixed so code looked better and more readable with comments

--- a/style.css
+++ b/style.css
@@ -1,21 +1,37 @@
 /* --------------------
 	General
 -------------------- */
-
 * {
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: 100;
 	letter-spacing: 1px;
 }
-body {
-	/*margin: 165px;*/
-}
-h1 {
-	font-size: 40px;
-}
+
 ul {
 	padding: 0;
 	list-style: none;
+}
+
+td {
+	width: 120px;
+	height: 80px;
+	background-color: #7b7b7b;
+	padding: 0;
+}
+
+h1 {
+	font-size: 40px;
+}
+
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	background: url(icons/direction.png) no-repeat right;
+	border-radius: 0;
+	padding: 5px;
 }
 
 /* --------------------
@@ -30,45 +46,34 @@ ul {
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
+
 .logo hr {
 	border: none;
 	height: 5px;
 	color: #96bde1;
 	background-color: #96bde1;
 }
-
 /* --------------------
 	Main
 -------------------- */
-
-td {
-	width: 120px;
-	height: 80px;
-	background-color: #7b7b7b;
-	padding: 0;
-}
-.add {
-	display: flex;
-	justify-content: flex-end;
-}
 .btn {
-  -webkit-border-radius: 5;
-  -moz-border-radius: 5;
-  border-radius: 5px;
-  color: #ffffff;
-  font-size: 15px;
-  background: #b760a9;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-  text-transform: uppercase;
-  border: none;
-  display: inline;
-  float: right;
+	display: inline;
+	float: right;
+	color: #ffffff;
+	font-size: 15px;
+	background: #b760a9;
+	padding: 10px 20px 10px 20px;
+	text-decoration: none;
+	text-transform: uppercase;
+	border: none;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	border-radius: 5px;
 
 }
-.wrapper {
-
-}
+/* MENU */
 section.menu {
 	padding-top: 14px;
 }
@@ -79,37 +84,46 @@ section.menu {
 	color: #b760a9;
 	background-color: #b760a9;
 }
+
 .menu p{
 	margin: 3px;
 	padding: 4px;
 }
+/* GALLERY */
+div.rectangle {
+	text-align: center;	
+}
+
 .rectangle {
 	color: #fff;
 	font-size: 12px;
-	text-transform: uppercase;
 	display: inline-block;
 	width: 150px;
 	height: 30px;
 	background-color: #b9b8b8;
 	margin-bottom: -8px;
 }
-div.rectangle {
-	text-align: center;	
-}
+
 .triangle {
 	display: inline-block;
+	background-color: #b9b8b8;
 	width: 30px;
 	height: 30px;
-	background-color: #b9b8b8;
-	-webkit-clip-path: polygon(0 100%, 0 0, 100% 100%);
-	clip-path: polygon(0 100%, 0 0, 100% 100%);
 	margin-bottom: -13px;
+	-webkit-clip-path: polygon(0 100%, 0 0, 100% 100%);;
+	-moz-clip-path: polygon(0 100%, 0 0, 100% 100%);;
+	-ms-clip-path: polygon(0 100%, 0 0, 100% 100%);;
+	-o-clip-path: polygon(0 100%, 0 0, 100% 100%);;
+	clip-path: polygon(0 100%, 0 0, 100% 100%);;
 }
+
 .rectangle:first-child, .triangle:nth-child(2) {
 	background-color: #b760a9;
 }
+
 .direction-back {
 	background: url(icons/arrow2.png) no-repeat right;
+	display: -ms-inline-flex;
 	display: inline-flex;
 	background-color: #e1e1e1;
 	width: 22px;
@@ -117,6 +131,7 @@ div.rectangle {
 	padding-top: 41px;
 	padding-bottom: 289px;
 }
+
 .direction-forward {
 	background: url(icons/arrow1.png) no-repeat right;
 	display: inline-flex;
@@ -127,21 +142,25 @@ div.rectangle {
 	padding-bottom: 289px;
 }
 
+/* GALLERY PAGES */
 div.pictures {
 	display: inline-flex;
 	width: 895px;
 }
 	
 .pictures {
-	display: inline;
+	display: -ms-flex;
 	display: flex;
 	justify-content: center;
 }
+
 div.pages {
 	padding-top: 8px;
+	display: -ms-flex;
 	display: flex;
 	justify-content: flex-end;
 }
+
 div.pages img {
 	border: solid;
 	border-width: 1px;
@@ -150,6 +169,7 @@ div.pages img {
 	height: 8px;
 	padding: 4px;
 }
+
 .pages p{
 	display: inline;
 	color: #7b7b7b;
@@ -157,37 +177,33 @@ div.pages img {
 	padding: 4px;
 	font-size: 11px;
 }
+
+/* SEARCH IN GALLERY */
 section#gallery-search {
 	padding-left:48px;
 }
+
 section.search {
 	height: 20px;
 }
+
 .search h4 {
 	color: #b760a9;
 	text-transform: uppercase;
 	display: inline-block;
 	margin: 0;
 }
+
 .search h5 {
 	color: #b760a9;
 	display: inline;
 	padding-left: 10px;	
 }
+
 .option-one {
 	background: url(icons/direction.png) no-repeat right;
+}
 
-}
-select {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	-ms-appearance: none;
-	-o-appearance: none;
-	appearance: none;
-	background: url(icons/direction.png) no-repeat right;
-	border-radius: 0;
-	padding: 5px;
-}
 .option-one {
 	width: 110px;
 	background-position: 85px 4px;
@@ -196,32 +212,38 @@ select {
 	width: 180px;
 	background-position: 150px 4px;
 }
-
-.tags p {
-	display: inline;
-	font-size: 12px;
-}
-
+/* ANIMAL TAGS */
 section.tags {
 	width: 580px;
 	padding-top: 0;
 	padding-bottom: 20px;
 }
+
+.tags p {
+	display: inline;
+	font-size: 12px;
+}
 .tags a {
 	color: #b760a9;
 	font-size: 12px;
 }
+
+/* SHARE */
 .share {
+	display: -ms-flex;
 	display: flex;
 	justify-content: flex-end;
 }
+
 .share a, .share img {
 	padding-left: 2px;
 	padding-right: 2px;
 }
+
 .share img:last-child {
 	padding-right: 0;
 }
+
 .share a {
 	font-size: 12px;
 	text-decoration: none;
@@ -232,75 +254,87 @@ section.tags {
 	Footer
 -------------------- */
 
+/* ADRESS */
 .adress {
 	background-color: #0059a1;
 	padding: 10px;
 }
+
 .adress h4 {
 	color: #fff;
 	padding-right: 5px;
 	display: inline;
 }
+
 .adress ul {
 	display: inline;
 }
+
 .adress ul li {
 	color: #438fcc;
 	letter-spacing: 1px;
 	font-size: 10px;
 	display: inline;
 }
+/* PAGE LINKS */ 
 .container {
+	display: -ms-flex;
 	display: flex;
 	justify-content: space-between;
 	color: #868686;
 }
+
 .container h5 {
 	font-size: 10px;
 	margin-bottom: 5px;
 	text-transform: uppercase;
 }
+
 .container ul li {
 	padding-top: 5px;
 	font-size: 10px;
 }
+
 .container a {
 	color: #868686;
 	text-decoration: none;
-	
 }
+
 .footer-list a {
 	color: #868686;
 	font-size: 10px;
 	text-transform: uppercase;
 	text-decoration: none;
+	display: -ms-flex;
 	display: flex;
 	justify-content: flex-end;
 }
+
 .footer-list img {
 	width: 8px;
 	height: 8px;
 }
+
 .footer-list hr {
 	height: 2px;
 	border: none;
 	color: #0059a1;
 	background-color: #0059a1;
 }
-
+/* FOOTER LINKS */
 .footer-links ul {
+	display: -ms-flex;
 	display: flex;
 	justify-content: center;
 }
+
 .footer-links ul li {
 	font-size: 10px;
 	text-transform: uppercase;
 	padding-right: 12px;
 }
+
 .footer-links a {
 	color: #868686;
 	text-decoration: none;
 }
-
-
-
